--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
             word-break: break-all;
             word-wrap: break-word;
         }
+        h4 {
+            width: 96%;
+            margin: 0 auto 20px;
+        }
         .page-header {
             text-align: center;
             width: 96%;
@@ -412,5 +416,9 @@
         <div class="ec-snake space"></div>
     </div>
 </div>
+<h4>打包好的Keyframe.js地址(AMD)：<a target="_blank" href="dist/amd/lib/Keyframe.js">bs.baidu.com/public01/keyframes/dist/amd/lib/Keyframe.js</a></h4>
+<h4>未打包的Keyframe.js地址(AMD)：<a target="_blank" href="dist/amd/Keyframe.js">bs.baidu.com/public01/keyframes/dist/amd/Keyframe.js</a></h4>
+<h4>打包好的Keyframe.js地址(非AMD)：<a target="_blank" href="dist/lib/Keyframe.min.js">bs.baidu.com/public01/keyframes/dist/lib/Keyframe.min.js</a></h4>
+<h4>源代码:<a target="_blank" href="https://github.com/tingkl/keyframes">https://github.com/tingkl/keyframes</a></h4>
 </body>
 </html>
