--- a/index.html
+++ b/index.html
@@ -39,6 +39,25 @@
             </tbody>
         </table>
         {{/doc}}
+        {{#compatible}}
+        <h3>{{{title}}}</h3>
+        <table class="table table-bordered table-hover">
+            <thead>
+            <tr>
+                <th>#</th>
+                <th>说明</th>
+            </tr>
+            </thead>
+            <tbody>
+            {{#list}}
+            <tr class="{{class}}">
+                <th scope="row">{{@index}}</th>
+                <td>{{{notify}}}</td>
+            </tr>
+            {{/list}}
+            </tbody>
+        </table>
+        {{/compatible}}
     </script>
     <style>
 
@@ -237,7 +256,14 @@
                     }
                     ]
                 }]
-            }]
+            }],
+            compatible: {
+                title: '5. 浏览器兼容性问题',
+                class: 'warning',
+                list: [{
+                    notify: 'IE10以上(包含IE10)以及firefox,google,opera,baidu浏览器表现正常'
+                }]
+            }
         };
         var cpl = Compiler.instance();
         Util.each(table.doc, function(item) {
