--- a/transform.html
+++ b/transform.html
@@ -471,6 +471,7 @@
     });
 
     then函数可以将回调插入变换队列中执行。
+    reExecute函数重写执行所有变换，<a href="example/transform.html" target="_blank">试一试</a>。
     A: rotateX 90deg + translateZ 100px
     B: translateZ 100px  + rotateX 90deg
     A !== B, A是在旋转之后为基准去变换
