'拼错单词毁一天'

--- a/example/xuandong_test.html
+++ b/example/xuandong_test.html
@@ -5,8 +5,8 @@
     <title>炫动-移动</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <link rel="shortcut icon" href="http://www.baidu.com/favicon.ico" type="image/x-icon">
-    <script src="../dist/lib.min.js"></script>
-    <script src="http://172.18.20.115:8081/target/target-script-min.js#anonymous"></script>
+    <script src="../src/lib/Keyframe.js"></script>
+    <script src="http://172.18.20.146:8081/target/target-script-min.js#anonymous"></script>
     <style>
         html, body {
             height: 100%;
