--- a/example/attention/wobble.html
+++ b/example/attention/wobble.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0"/>
     <title>attention.Wobble</title>
-    <script src="../../src/lib.js"></script>
+    <script src="../../src/lib/Keyframe.js"></script>
     <script src="../../lib/jquery.min.js"></script>
     <script src="../../src/attention/wobble.js"></script>
     <script>
