--- a/example/custom/flameOnHover.html
+++ b/example/custom/flameOnHover.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0"/>
     <title>custom.FlameOnHover</title>
-    <script src="../../src/lib.js"></script>
+    <script src="../../src/lib/Keyframe.js"></script>
     <script src="../../lib/jquery.min.js"></script>
     <script src="../../src/custom/flameOnHover.js"></script>
     <script>
