--- a/index.html
+++ b/index.html
@@ -442,6 +442,7 @@
         <div class="ec-snake space"></div>
     </div>
 </div>
+<h4>动画样例：<a target="_blank" href="example/index.html">bs.baidu.com/public01/keyframes/example/index.html</a></h4>
 <h4>打包好的Keyframe.js地址(AMD)：<a target="_blank" href="dist/amd/lib/Keyframe.js">bs.baidu.com/public01/keyframes/dist/amd/lib/Keyframe.js</a></h4>
 <h4>未打包的Keyframe.js地址(AMD)：<a target="_blank" href="dist/amd/Keyframe.js">bs.baidu.com/public01/keyframes/dist/amd/Keyframe.js</a></h4>
 <h4>打包好的Keyframe.js地址(非AMD)：<a target="_blank" href="dist/lib/Keyframe.min.js">bs.baidu.com/public01/keyframes/dist/lib/Keyframe.min.js</a></h4>
