--- a/transform.html
+++ b/transform.html
@@ -117,6 +117,8 @@
 </div>
 <div class="api">
     <script>
+        window.requestAnimationFrame = false;
+        window.webkitRequestAnimationFrame = false;
         var table = {
             doc: [{
                 title: '1. moveBy',
