--- a/index.html
+++ b/index.html
@@ -261,6 +261,8 @@
                 title: '5. 浏览器兼容性问题',
                 class: 'warning',
                 list: [{
+                    notify: 'transform ie >=9, transition keyframe ie >= 10, 所以ie10可以支持'
+                },{
                     notify: 'IE10以上(包含IE10)以及firefox,google,opera,baidu浏览器表现正常'
                 }]
             }
