--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -13,10 +13,16 @@
 
   <!-- include source files here... -->
   <script src="../src/Util.js"></script>
-
+  <script src="../src/Checker.js"></script>
+  <script src="../src/Event.js"></script>
+  <script src="../src/EventEmitter.js"></script>
+  <script src="../src/Compatible.js"></script>
+  <script src="../src/TFCompatible.js"></script>
   <!-- include spec files here... -->
   <script src="spec/Util.js"></script>
-
+  <script src="spec/Checker.js"></script>
+  <script src="spec/EventEmitter.js"></script>
+  <script src="spec/TFCompatible.js"></script>
 </head>
 
 <body>
