--- a/transform.html
+++ b/transform.html
@@ -299,6 +299,8 @@
                     notify: 'IE10,11不支持transform-style：preserve-3d,但是支持2d平面变换'
                 },{
                     notify: '使用skewX + skewY 替代skew，skew存在一些问题'
+                },{
+                    notify: 'transform ie >=9, transition keyframe ie >= 10, 所以ie10可以支持'
                 }]
             }
         };
