--- a/example/env.html
+++ b/example/env.html
@@ -99,6 +99,26 @@
             outline: 1px solid #0088cc;
             opacity: 1 !important;
         }
+
+        ul {
+            list-style-type: none;
+            position: absolute;
+            right: 0;
+            bottom: 0;
+            margin: 5px 0;
+        }
+        ul li {
+            float: left;
+            margin-right: 10px;
+            border: 1px solid black;
+            border-radius: 3px;
+            background-color: #000000;
+            line-height: 20px;
+            padding: 0 3px;
+        }
+        ul li a {
+            color: white;
+        }
     </style>
     <script src="../lib/require.js"></script>
     <script src="../dist/amd/lib/Keyframe.js"></script>
@@ -120,6 +140,7 @@
     <em data-id="frame5">frame5</em><br/>
     <em data-id="frame6">frame6</em><br/>
 </div>
+<ul><li><a target="_blank" href="xuandong.html">炫动样例</a></li><li><a target="_blank" href="xuandong-require.html">炫动样例(amd)</a></li><li><a target="_blank" href="stepByStep.html">逐帧样例</a></li></ul>
 <script>
 require.config({baseUrl: '../dist/amd'});
 require(['Event', 'Compiler', 'KFCompatible', 'Keyframe', 'Util'], function (Event, Compiler, Compatible, Keyframe, Util) {
