--- a/example/doc.html
+++ b/example/doc.html
@@ -80,6 +80,11 @@
             envWin.postMessage(code, '*');
         });
         var defaultData =     {
+            'class': {
+                'class-name': {
+                    "transform": "rotateX(180deg)"
+                }
+            },
             'frame1': {
                 '0.6': {
                     'translateY': '0px'
