--- a/example/env.html
+++ b/example/env.html
@@ -77,6 +77,16 @@
             background: url(images/run.png) 0 0 no-repeat;
         }
 
+        .frame7 {
+            position: absolute;
+            left: 20px;
+            bottom: 40px;
+            border: 1px solid black;
+            background-color: #000000;
+            padding: 5px;
+            color: white;
+        }
+
         #animation {
             font-size: 16px;
             font-family: Monaco, Menlo, 'Ubuntu Mono', Consolas, source-code-pro, monospace;
@@ -125,6 +135,7 @@
 </head>
 <body>
 <div id="container">
+    <div class="frame7 class-name">绑定了class的元素</div>
     <div id="frame6"></div>
     <div id="frame5"></div>
     <div id="frame3"></div>
