--- a/example/doc.html
+++ b/example/doc.html
@@ -82,7 +82,10 @@
         var defaultData =     {
             'class': {
                 'class-name': {
-                    "transform": "rotateX(180deg)"
+                    "transform": "rotateZ(1turn)",
+                    "background-color": "white",
+                    "color": "black",
+                    "transition": "all 3s ease"
                 }
             },
             'frame1': {
