'time转percent替换bug修复'

--- a/example/env.html
+++ b/example/env.html
@@ -151,7 +151,7 @@
     <em data-id="frame5">frame5</em><br/>
     <em data-id="frame6">frame6</em><br/>
 </div>
-<ul><li><a target="_blank" href="xuandong.html">炫动样例</a></li><li><a target="_blank" href="xuandong-require.html">炫动样例(amd)</a></li><li><a target="_blank" href="stepByStep.html">逐帧样例</a></li></ul>
+<ul><li><a target="_blank" href="../demo/jd-book/index.app.html">跳动样例</a></li><li><a target="_blank" href="../demo/jd-1212/index.app.html">摇摆样例</a></li><li><a target="_blank" href="../demo/loreal-ice/index.app.html">移动样例</a></li><li><a target="_blank" href="xuandong.html">炫动样例</a></li><li><a target="_blank" href="xuandong-require.html">炫动样例(amd)</a></li><li><a target="_blank" href="stepByStep.html">逐帧样例</a></li></ul>
 <script>
 require.config({baseUrl: '../dist/amd'});
 require(['Event', 'Compiler', 'KFCompatible', 'Keyframe', 'Util'], function (Event, Compiler, Compatible, Keyframe, Util) {
