--- a/demo/middle/index.app.html
+++ b/demo/middle/index.app.html
@@ -5,22 +5,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>炫动 - 百度</title>
         <link rel="stylesheet" type="text/css" href="main.css">
-        <script type="text/javascript" src="http://ecma.bdimg.com/public01/keyframes/dist/lib/Keyframe.min.js"></script>
+        <script type="text/javascript" src="http://ecmc.bdimg.com/public01/keyframes/dist/lib/Keyframe.min.js"></script>
         <script type="text/javascript" src="http://ecmc.bdimg.com/public01/pl-h5-page/sdk/xuandong/main.js"></script>
     </head>
     <body>
 <!-- 请在下方区域编辑 HTML --> <!--  HTML CONTENT START  -->
 
-<a id="whatever1" target="_blank" href="http://www.no.com">
-    <div id="container">
-        <img id="frame1" src="image/bg.png">
-        <img id="frame2" src="image/fg.png">
-        <img id="frame3" src="image/200.png">
-        <img id="frame4" src="image/100.png">
-    </div>
-</a>
-
+<div id="container" class="class-scale">
+    <div id="frame5"></div>
+    <div id="frame3"></div>
+    <div id="frame4"></div>
+    <div id="frame2"></div>
+    <div id="frame1"></div>
+</div>
 <!--  HTML CONTENT END  --> <!-- 请在上方区域编辑 HTML -->
-        <script type="text/javascript" src="main.js"></script>
+<script type="text/javascript" src="main.js"></script>
     </body>
 </html>
