--- a/demo/loreal/index.app.html
+++ b/demo/loreal/index.app.html
@@ -11,43 +11,38 @@
     <body>
 <!-- 请在下方区域编辑 HTML --> <!--  HTML CONTENT START  -->
 
-<div id="entry" class="class-origin">
+<div id="entry" class="class-scale">
     <a href="###" id="link-url-1" target="_blank">
         <div id="container">
-            <div id="bg-1">
-                <img src="image/bg-1.jpg">
+            <img id="bg-1" src="image/bg-1.jpg">
+            <div id="bg-2">
+                <img src="image/bg-2.jpg">
             </div>
+            <div id="mask"></div>
             <div id="ret-imgs">
                 <div id="ret-img-1">
                     <img id="ret-img-1-r" src="image/ret-img-1.jpg">
                 </div>
-                <div id="ret-img-2">
+                <div id="ret-img-2" class="ret-img">
                     <img src="image/ret-img-2.jpg">
                 </div>
-                <div id="ret-img-3">
+                <div id="ret-img-3" class="ret-img">
                     <img src="image/ret-img-2.jpg">
                 </div>
-                <div id="ret-img-4">
+                <div id="ret-img-4" class="ret-img">
                     <img src="image/ret-img-2.jpg">
                 </div>
-                <div id="ret-img-5">
+                <div id="ret-img-5" class="ret-img">
                     <img src="image/ret-img-2.jpg">
                 </div>
-                <div id="highlight-border">
-                    <img id="highlight-image" src="image/highlight.png">
+                <div id="highlight-image">
+                    <img src="image/highlight.png">
                 </div>
             </div>
-            <div id="bg-2">
-                <img src="image/bg-2.jpg">
+            <div id="mid-anim">
+                <img id="mid-anim-img" src="image/mid-img.jpg">
             </div>
         </div>
-
-        <div id="mask"></div>
-
-        <div id="mid-anim">
-            <img id="mid-anim-img" src="image/mid-img.jpg">
-        </div>
-
         <div id="paper">
             <img id="paper-img" src="image/paper.png">
         </div>
@@ -55,6 +50,6 @@
 </div>
 
 <!--  HTML CONTENT END  --> <!-- 请在上方区域编辑 HTML -->
-        <script type="text/javascript" src="main.js"></script>
+<script type="text/javascript" src="main.js"></script>
     </body>
 </html>
